Updates styles to fix alignment issues

--- a/src/style/components/projectCard.css
+++ b/src/style/components/projectCard.css
@@ -1,17 +1,20 @@
 .card-wrapper {
   padding: 24px;
   border: 2px solid #393939;
-  display: grid;
-  grid-template-columns: 12fr;
-  grid-row-gap: 12px;
+  display: flex;
+  flex-direction: column;
   background-color: #FFF;
 }
 
 .card-wrapper h2 {
-  margin: 0;
+  margin: 0 0 16px;
   font-weight: 600;
   font-size: 1.4em;
   border-bottom: 3px solid turquoise;
+}
+
+.card-wrapper > * {
+  padding-bottom: 16px;
 }
 
 .card-description {
@@ -28,6 +31,7 @@
 }
 
 .card-tags {
+  min-height: 68px;
   display: flex;
   flex-flow: wrap;
 }
@@ -39,6 +43,11 @@
   margin: 0 8px 8px 0;
   border-radius: 1em;
   background-color: #c1fff8;
+  max-height: 16px;
+}
+
+.card-contributors {
+  padding-bottom: 16px;
 }
 
 .card-contributor-avatars {
@@ -49,11 +58,11 @@
 }
 
 .card-description {
-  min-height: 160px;
+  min-height: 150px;
 }
 
 .card-looking-for {
-  min-height: 120px;
+  min-height: 110px;
 }
 
 .card-looking-for-label,
@@ -82,9 +91,7 @@
 .card-buttons {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 40px;
+  grid-template-rows: 42px;
   grid-gap: 10px;
-}
-
-.card-button {
+  padding-bottom: 0;
 }
